# whatsapp_toolkit

./: .gitignore  LICENSE  README.md  docker-compose.yml  get_version.py  grupos_obtenidos.json  publish.py  publish.sh  pyproject.toml  test_path.py  wakeup_evolution.sh
 whatsapp_toolkit/: README.md
src/whatsapp_toolkit/: __init__.py  api_cruda.py  async_client.py  async_instance.py  async_sender.py  client.py  devtools.py  sender.py  templates.py  types.py  utils.py  whatsapp_instanced.py
src/whatsapp_toolkit/cli/: evolution.py  main.py  webhook.py
src/whatsapp_toolkit/devtools/: __init__.py  devtools.py  evolution.py  main.py  webhook.py
src/whatsapp_toolkit/devtools/templates/: __init__.py  templates.py  webhook_templates.py
src/whatsapp_toolkit/devtools/templates/evolution/: docker-compose.yml.j2  dotenv.j2
src/whatsapp_toolkit/devtools/templates/webhook/: Dockerfile.j2  README.md.j2  config.py.j2  docker-compose.yml.j2  dotenv-compose.j2  dotenv-webhook.j2  handlers.py.j2  main.py.j2  manager.py.j2  requirements.txt.j2  services.py.j2
src/whatsapp_toolkit/webhook/: dispatcher.py  router.py
src/whatsapp_toolkit/webhook/schemas/: message.py
test/: func_aux.py  test_api.py  test_api_cruda.py  test_json_and_mogno.py  test_json_lectura.py  test_wakpeup_evo.py  test_whatsapp.py
webhook/: config.py  dispatcher.py  handlers.py  main.py  main_webhook.py  manager.py  router.py  schemas.py  services.py  test_dispatcher.py
webhook/schemas/: message.py
