[project]
name = "whatsapp-toolkit"
version = "1.0.0"
description = "Una biblioteca para interactuar con la API de WhatsApp desde Python usando Evolution API"
authors = [
    { name="Fernando Leon Franco", email="fernanlee2131@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]
